tests/snapshots/trace_solver@3188109478259045425.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    rules_display_style: Expression
  bundle_name: stateless
  request: "[&&mut x]: &[&mut T]"
---
[&&mut x] @ s: &[&mut T]
// Applying rule `ConstructorRef`
&&mut x @ &(*s).0: &&mut T
// Applying rule `Deref(EatOuter)`
&mut x @ *&(*s).0: &mut T
// Applying rule `Deref(EatOuter)`
x @ **&(*s).0: T
// Applying rule `Binding`
let x: T = **&(*s).0

// Final bindings (simplified):
let x: T = *(*s).0;
